React to dark mode; Fix window styling for pre-mojave macOS

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -12,11 +12,14 @@ body
     border: 1px solid $dark1 * 1.45
 
   &[data-platform="darwin"]
-    // background: rgba($dark1, 0)
-    background: $dark2
-    border: 1px solid $dark2
     border-top: 1px solid black
-    border-radius: 4px
+    &[data-dark-mode]
+      // background: rgba($dark1, 0)
+      background: $dark2
+      border: 1px solid $dark2
+      border-radius: 4px
+    &[data-darwin-old]
+      border-top: 1px solid $dark1 * 1.3
 
 form
   fieldset
